--- a/html/colourstyle-test.html
+++ b/html/colourstyle-test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head lang="en">
 <meta charset="UTF-8">
@@ -88,13 +88,13 @@ $(function(){
 </head>
 <body style="overflow:hidden"><script src="/demos/googlegg.js"></script>
 <ul class="nav-left-container">
-        <li>
-            <a href="index.html">
-                <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
-                <span>首页</span>
-                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
-            </a>
-        </li>
+    <li>
+        <a href="../index.html">
+            <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
+            <span>首页</span>
+            <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+        </a>
+    </li>
         <li>
             <a href="#">
                 <span class="glyphicon glyphicon-calendar f12" aria-hidden="true"></span>
