--- a/html/colourstyle.html
+++ b/html/colourstyle.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -23,13 +23,13 @@
 
 <body style="overflow-x:hidden;overflow-y:hidden;height: 100%;background-color: black">
    <ul class="nav-left-container">
-        <li>
-            <a href="index.html">
-                <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
-                <span>首页</span>
-                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
-            </a>
-        </li>
+       <li>
+           <a href="../index.html">
+               <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
+               <span>首页</span>
+               <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+           </a>
+       </li>
         <li>
             <a href="#">
                 <span class="glyphicon glyphicon-calendar f12" aria-hidden="true"></span>
