--- a/html/colourstyle-tool.html
+++ b/html/colourstyle-tool.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -61,13 +61,13 @@
 
 <body style="overflow-x:hidden;overflow-y:hidden;">
 	 <ul class="nav-left-container">
-        <li>
-            <a href="index.html">
-                <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
-                <span>首页</span>
-                <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
-            </a>
-        </li>
+         <li>
+             <a href="../index.html">
+                 <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
+                 <span>首页</span>
+                 <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
+             </a>
+         </li>
         <li>
             <a href="#">
                 <span class="glyphicon glyphicon-calendar f12" aria-hidden="true"></span>
