--- a/html/composition.html
+++ b/html/composition.html
@@ -54,6 +54,23 @@
             -ms-transform: scale(1.1);
         }
 
+        #yindao:hover {
+            z-index: 5;
+            content: url('../image/composition/3.jpg');
+        }
+        #sanfen:hover {
+            z-index: 5;
+            content: url('../image/composition/1.jpg');
+        }
+        #duijiao:hover {
+            z-index: 5;
+            content: url('../image/composition/4.jpg');
+        }
+        #duichen:hover {
+            z-index: 5;
+            content: url('../image/composition/2.jpg');
+        }
+
         #yindao {
             position: absolute;
             left: 0;
@@ -92,6 +109,7 @@
             height: 40%;
             left: -2%;
         }
+
     </style>
 </head>
 
@@ -99,7 +117,7 @@
     <ul class="nav-left-container">
        
         <li>
-            <a href="index.html">
+            <a href="../index.html">
                 <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
                 <span>首页</span>
                 <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
@@ -176,16 +194,16 @@
         <img id="title" alt="" src="../image/composition/title.png">
         <ul>
             <li class="album">
-                <a href="yindao.html"><img img id="yindao" border="10" alt="" src="../image/composition/03.jpg" onmouseout="this.src='../image/composition/3.jpg'" onmouseover="this.src='../image/composition/03.jpg" /></a>
+                <a href="yindao.html"><img img id="yindao" border="10" alt="" src="../image/composition/03.jpg"/></a>
             </li>
             <li class="album">
-                <a href="sanfen.html"><img id="sanfen" border="10" alt="" src="../image/composition/1.jpg" onmouseout="this.src='../image/composition/1.jpg'" onmouseover="this.src='../image/composition/1.jpg" /></a>
+                <a href="sanfen.html"><img id="sanfen" border="10" alt="" src="../image/composition/01.jpg"/></a>
             </li>
             <li class="album">
-                <a href="duijiao.html"><img id="duijiao" border="10" alt="" src="../image/composition/004.jpg" onmouseout="this.src='../image/composition/004.jpg'" onmouseover="this.src='../image/composition/04.jpg" /></a>
+                <a href="duijiao.html"><img id="duijiao" border="10" alt="" src="../image/composition/04.jpg"/></a>
             </li>
             <li class="album">
-                <a href="duichen.html"><img id="duichen" alt="" border="10px" src="../image/composition/02.jpg" onmouseout="this.src='../image/composition/2.jpg'" onmouseover="this.src='../image/composition/02.jpg" /></a>
+                <a href="duichen.html"><img id="duichen" alt="" border="10px" src="../image/composition/02.jpg"/></a>
             </li>
         </ul>
     </div>
