--- a/html/main-test.html
+++ b/html/main-test.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html >
 <head>
 <meta charset="utf-8">
@@ -20,7 +20,7 @@
 	
 	<ul class="nav-left-container">
         <li>
-            <a href="index.html">
+            <a href="../index.html">
                 <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
                 <span>首页</span>
                 <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
