--- a/html/structure-tool.html
+++ b/html/structure-tool.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -73,7 +73,7 @@
             </ul>
         </li>
         <li>
-            <a href="album.html">
+            <a href="../index.html">
                 <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
                 <span>相册</span>
                 <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
