--- a/html/sanfen.html
+++ b/html/sanfen.html
@@ -102,6 +102,31 @@
             /*max-width: 100%;*/
             /*max-height: 100%;*/
         }
+        @media screen and (max-width: 1200px) {
+
+            #text_slide {
+                left: 1%;
+                width: 38%;
+                box-shadow: #e2dedf 20px 20px;
+            }
+            #text {
+                width: 95%;
+            }
+
+            #img {
+                top: 10%;
+            }
+
+            #pic {
+                height: 50vh;
+            }
+
+        }
+        @font-face {
+            font-family: "HYZHONGXIUTIJ";
+            src: url("../font/HYZHONGXIUTIJ.TTF")
+        }
+
 
         #bgm {
             width: 50%;
