--- a/html/duijiao.html
+++ b/html/duijiao.html
@@ -44,13 +44,15 @@
 
         #img_slide {
             width: 41%;
-            height: 100%;
-            /*background-color:forestgreen;*/
-            background-image: url("../image/composition/04.jpg");
-            background-size:100% 100%;
+            height:100%;
+            /*background-color:red;*/
+            /*background-image: url("../image/composition/04.PNG");*/
+            /*background-size:100% 100%;*/
             float: left;
         }
-
+        #pic_duijiao{
+            height: 100%;
+        }
         #right_slide {
             width: 59%;
             height: 100%;
@@ -63,7 +65,7 @@
         #text_slide {
             width: 70%;
             /*background-color:red;*/
-            margin-left: 20%;
+            margin-left:20%;
             float: left;
         }
 
@@ -73,6 +75,7 @@
             border-style: solid;
             border-left-width: 0px;
             border-color: #e2dedf;
+            background-color: #080615;
         }
 
         .title {
@@ -92,6 +95,21 @@
             /*text-indent: 3rem;*/
             line-height: 2em;
             color: #e2dedf;
+        }
+        @media screen and (max-width: 1200px) {
+            #img_slide {
+                width: 41%;
+                height: 86%;
+                margin-top: 7%;
+            }
+
+            #pic_duijiao {
+                height: 100%;
+            }
+
+            #text_slide {
+                margin-left: 30%;
+            }
         }
 
         @font-face {
@@ -184,7 +202,7 @@
         <section class="color-1">
             <div class="container">
                 <div id="intro_slide">
-                    <div id="img_slide"></div>
+                    <div id="img_slide"><img id="pic_duijiao" src="../image/composition/04.PNG" alt=""></div>
                     <div id="right_slide">
                         <div id="text_slide">
                             <audio src="../music/duijiao.mp3" controls="controls" autoplay="autoplay" style="width: 100%;">Your browser does not support the audio element.</audio>
