--- a/html/structure-tool.html
+++ b/html/structure-tool.html
@@ -17,7 +17,7 @@
 	
 	 <ul class="nav-left-container">
         <li>
-            <a href="index.html">
+            <a href="../index.html">
                 <span class="glyphicon glyphicon-hourglass" aria-hidden="true"></span>
                 <span>首页</span>
                 <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
