--- a/html/composition.html
+++ b/html/composition.html
@@ -194,16 +194,16 @@
         <img id="title" alt="" src="../image/composition/title.png">
         <ul>
             <li class="album">
-                <a href="yindao.html"><img img id="yindao" border="10" alt="" src="../image/composition/03.jpg"/></a>
+                <a href="yindao.html" title="点击查看引导线构图法"><img img id="yindao" border="10" alt="" src="../image/composition/03.jpg" alt="引导线法"/></a>
             </li>
             <li class="album">
-                <a href="sanfen.html"><img id="sanfen" border="10" alt="" src="../image/composition/01.jpg"/></a>
+                <a href="sanfen.html" title="点击查看三分构图法"><img id="sanfen" border="10" alt="" src="../image/composition/01.jpg"/></a>
             </li>
             <li class="album">
-                <a href="duijiao.html"><img id="duijiao" border="10" alt="" src="../image/composition/04.jpg"/></a>
+                <a href="duijiao.html" title="点击查看对角线构图法"><img id="duijiao" border="10" alt="" src="../image/composition/04.jpg"/></a>
             </li>
             <li class="album">
-                <a href="duichen.html"><img id="duichen" alt="" border="10px" src="../image/composition/02.jpg"/></a>
+                <a href="duichen.html" title="点击查看对称构图法"><img id="duichen" alt="" border="10px" src="../image/composition/02.jpg"/></a>
             </li>
         </ul>
     </div>
