--- a/html/duijiao.html
+++ b/html/duijiao.html
@@ -202,7 +202,7 @@
         <section class="color-1">
             <div class="container">
                 <div id="intro_slide">
-                    <div id="img_slide"><img id="pic_duijiao" src="../image/composition/04.PNG" alt=""></div>
+                    <div id="img_slide"><img id="pic_duijiao" src="../image/composition/04.png" alt=""></div>
                     <div id="right_slide">
                         <div id="text_slide">
                             <audio src="../music/duijiao.mp3" controls="controls" autoplay="autoplay" style="width: 100%;">Your browser does not support the audio element.</audio>
