--- a/html/PS-structure-video.html
+++ b/html/PS-structure-video.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>裁剪工具</title>
+<title>构图调教</title>
 	<link rel="stylesheet" href="../css/PS-structure-video.css">
 	
 	<link rel="stylesheet" href="https://www.jq22.com/jquery/bootstrap-3.3.4.css">
@@ -67,8 +67,11 @@
                 <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
             </a>
             <ul class="nav-left-container-small">
-                <li>
-                    <a class="J_menuItem" href="main-test.html">理论选择题</a>
+                 <li>
+                    <a class="J_menuItem" href="main-test.html">综合理论测试题</a>
+                </li>
+				 <li>
+                    <a class="J_menuItem" href="picture-test.html">图片效果测试题</a>
                 </li>
             </ul>
         </li>
