--- a/html/duijiao.html
+++ b/html/duijiao.html
@@ -174,8 +174,11 @@
                 <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
             </a>
             <ul class="nav-left-container-small">
-                <li>
-                    <a class="J_menuItem" href="main-test.html">理论选择题</a>
+                 <li>
+                    <a class="J_menuItem" href="main-test.html">综合理论测试题</a>
+                </li>
+				 <li>
+                    <a class="J_menuItem" href="picture-test.html">图片效果测试题</a>
                 </li>
             </ul>
         </li>
