--- a/html/structure-test.html
+++ b/html/structure-test.html
@@ -140,8 +140,11 @@ $(function(){
                 <span class="glyphicon glyphicon-menu-right f12 fr" aria-hidden="true"></span>
             </a>
             <ul class="nav-left-container-small">
-                <li>
-                    <a class="J_menuItem" href="main-test.html">理论选择题</a>
+                 <li>
+                    <a class="J_menuItem" href="main-test.html">综合理论测试题</a>
+                </li>
+				 <li>
+                    <a class="J_menuItem" href="picture-test.html">图片效果测试题</a>
                 </li>
             </ul>
         </li>
@@ -255,9 +258,8 @@ $(function(){
 	
 </div>
 	
-	<input type="button" class="button button-highlight button-pill button-large" style="width:90px;height: 36px;color:#000000;font-size: 17px;border: none;" value="提交" id="submit">
-	<button class="answer" style="width:90px;height:36px;color:#000000;font-size: 17px;border: none;" >
-				 查看答案</button>
+	<input type="button" class="button button-highlight button-pill button-large" value="提交" id="submit">
+    <button class="answer">查看正确答案</button>
 	
 </div>
 </body>
