--- a/html/colourstyle.html
+++ b/html/colourstyle.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>色调介绍</title>
+    <title>色调类型</title>
     <link rel="stylesheet" href="https://www.jq22.com/jquery/bootstrap-3.3.4.css">
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/jquery-kq-nav-left.css">
@@ -75,7 +75,10 @@
             </a>
             <ul class="nav-left-container-small">
                 <li>
-                    <a class="J_menuItem" href="main-test.html">理论选择题</a>
+                    <a class="J_menuItem" href="main-test.html">综合理论测试题</a>
+                </li>
+				 <li>
+                    <a class="J_menuItem" href="picture-test.html">图片效果测试题</a>
                 </li>
             </ul>
         </li>
