--- a/html/yindao.html
+++ b/html/yindao.html
@@ -179,7 +179,10 @@
             </a>
             <ul class="nav-left-container-small">
                 <li>
-                    <a class="J_menuItem" href="main-test.html">理论选择题</a>
+                    <a class="J_menuItem" href="main-test.html">综合理论测试题</a>
+                </li>
+				 <li>
+                    <a class="J_menuItem" href="picture-test.html">图片效果测试题</a>
                 </li>
             </ul>
         </li>
