--- a/index.html
+++ b/index.html
@@ -35,17 +35,16 @@
         /*标题*/
         #title_slide {
             /*background-color: red;*/
-            width:600px;
+            width:100%;
             position: absolute;
-            left:50%;
-            margin-left:-300px;
-            top: 16%;
+            /*left:50%;*/
+            /*margin-left:-300px;*/
+            top: 7%;
             text-align: center;
         }
 
         .title {
             /*line-height:10vh;*/
-
             /*font-weight: bold;*/
             color: #e2dedf;
         }
@@ -69,9 +68,11 @@
 
         #button_slide {
             position: absolute;
-            width: 80%;
-            top: 53%;
-            left: 10%;
+            /*background-color: red;*/
+            width:740px;
+            top: 33%;
+            left: 50%;
+            margin-left:-370px;
         }
 
         #button_slide_left {
@@ -91,7 +92,7 @@
         .btn {
             margin: 0 auto;
             display: block;
-            width: 55%;
+            width:80%;
             list-style-type: none;
             text-align: center;
             padding: 2vh;
@@ -131,6 +132,27 @@
             cursor: pointer;
         }
 
+        #info_slide {
+            position: absolute;
+            width: 680px;
+            top: 70%;
+            left: 50%;
+            margin-left: -355px;
+            background-color: rgba(226,222,223,0.8);
+            border-radius: 14px;
+            border: solid 1px rgba(226,222,223,0.8);
+            padding: 15px;
+        }
+        .info {
+            font-size: 15px;
+            font-family: HYZHONGXIUTIJ;
+            /*letter-spacing: 5px;*/
+            text-indent: 2em;
+            color: #0e2240;
+            font-weight:bold;
+            margin-top:10px;
+        }
+
     </style>
 </head>
 
@@ -151,6 +173,13 @@
                 <input class="btn btn_right" type=button value="测试" onclick="window.open('html/main-test.html')">
                 <input class="btn btn_right" type=button value="相册" onclick="window.open('html/album.html')">
             </div>
+        </div>
+
+        <div id="info_slide">
+            <p class="info" style="text-indent:0px; margin-top:0px">作品介绍：</p>
+            <p class="info">本课件主要介绍Photoshop后期中的构图和调色功能。其中，构图是图像编辑部分的一个功能，调色是校色调色部分中的一个功能。</p>
+            <p class="info">本课件将演示如何使用Photoshop对图像进行二次构图以及色调调整两大方面的图像处理，并附有练习题和图片鉴赏以巩固已学内容。</p>
+            <p class="info">本课件适用于所有对二次构图和调色处理有需要的Photoshop初学者。</p>
         </div>
     </div>
 </body>
